# SKIRT9

./: CMakeLists.txt  configSKIRT.sh  makeSKIRT.sh
SKIRT/core/: AdaptiveMeshSnapshot.cpp  HDF5InFile.cpp  HDF5InFile.hpp  MonteCarloSimulation.cpp  ParticleSnapshot.cpp  Snapshot.cpp  Snapshot.hpp  VoronoiMeshSnapshot.cpp
